[package]
name = "oom-watcher-rust"
version = "0.1.0"
authors = ["bin liu <bin@hyper.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1.31"
libc = "0.2.58"
inotify = "0.9.2"
